done most of the code smells